Data is in subfolder.

--- a/7. Forecasting.ipynb
+++ b/7. Forecasting.ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "air_passengers = pd.read_csv(\"AirPassengers.csv\", header = 0, parse_dates = [0], names = ['Month', 'Passengers'], index_col = 0)"
+    "air_passengers = pd.read_csv(\"data/AirPassengers.csv\", header = 0, parse_dates = [0], names = ['Month', 'Passengers'], index_col = 0)"
    ]
   },
   {
