--- a/8. Spectral Analysis.ipynb
+++ b/8. Spectral Analysis.ipynb
@@ -68,7 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "air_passengers = pd.read_csv('AirPassengers.csv')\n",
+    "air_passengers = pd.read_csv('data/AirPassengers.csv')\n",
     "x = np.array(air_passengers['#Passengers'].values)\n",
     "n_predict = 300\n",
     "extrapolation = fourierExtrapolation(x, n_predict)\n",
