--- a/9. Clustering & Classification.ipynb
+++ b/9. Clustering & Classification.ipynb
@@ -32,7 +32,7 @@
    },
    "outputs": [],
    "source": [
-    "words = pd.read_csv('50words_TEST')"
+    "words = pd.read_csv('data/50words_TEST.csv')"
    ]
   },
   {
